--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
-  "name": "rideshare",
+  "name": "react-router-firebase-auth",
   "version": "0.1.0",
   "private": true,
-  "dependencies": {
-    "firebase": "^4.1.2",
-    "react": "^15.5.4",
-    "react-dom": "^15.5.4"
-  },
   "devDependencies": {
-    "react-scripts": "1.0.7"
+    "react-scripts": "0.9.5"
+  },
+  "dependencies": {
+    "bootstrap": "^3.3.7",
+    "firebase": "^3.6.1",
+    "react": "^15.4.0",
+    "react-dom": "^15.4.0",
+    "react-router-dom": "^4.0.0-beta.8"
   },
   "scripts": {
     "start": "react-scripts start",
