--- a/package.json
+++ b/package.json
@@ -6,12 +6,13 @@
     "react-scripts": "0.9.5"
   },
   "dependencies": {
+    "dateformat": "^2.0.0",
     "firebase": "^3.6.1",
     "react": "^15.4.0",
     "react-dom": "^15.4.0",
     "react-redux": "^5.0.5",
-    "redux": "^3.6.0",
-    "react-router-dom": "^4.0.0-beta.8"
+    "react-router-dom": "^4.0.0-beta.8",
+    "redux": "^3.6.0"
   },
   "scripts": {
     "start": "react-scripts start",
